feat: LLM-ready outputs, live profile <pid>, and package scoping
Extract a render-agnostic ProfileSummary from the JFR analysis and render it
three ways via Renderers: markdown (default), scoped JSON, and an LLM prompt
(analyze -f md|json|prompt; JSON hand-rolled to keep the engine dependency-free).

Add `profile <pid>`: attach to a running JVM and capture a timed JFR recording
through the public FlightRecorder MXBean over a local management agent (no jcmd,
no --add-exports). Options: -d/--duration, -s/--settings, -f/--format, -k/--keep.

Add Scope to decide what counts as application code: the default skip-list now
covers common frameworks (Spring, Apache, BouncyCastle, Jackson, logging, Netty,
Reactor) in addition to the JDK, plus -a/--app-package (include-only) and
-x/--exclude. Fixes the issue where framework frames buried the user's own code.

Enable case-insensitive enum options so `-f json` works.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01HrFrLH7hRbT4vDmqfyWYnf