@@ -15,12 +15,19 @@ You are *not* building a profiler — capture (`jdk.jfr.Recording`) and parsing
 
 ## Next — finish the dev MVP (~weeks)
 
-- [ ] `profile.json` (scoped) + `prompt.md` outputs alongside the markdown.
-- [ ] `profile <pid>` — live attach + timed JFR capture (`jdk.jfr.Recording`).
+- [x] Scoped JSON + LLM-prompt outputs alongside the markdown — shipped as
+      `analyze -f md|json|prompt` over one `ProfileSummary` (dependency-free, JSON
+      hand-rolled). Sets up the MCP server's structured surface.
+- [x] `profile <pid>` — live attach + timed JFR capture via the public
+      FlightRecorder MXBean over a local management agent (no `jcmd`, no
+      `--add-exports`). `-d/--duration`, `-s/--settings`, `-f/--format`, `-k/--keep`.
 - [ ] Continuous recording + **dump-on-trigger** (ring buffer → `JFR.dump`).
-- [ ] Tune the summarizer against real workloads (unitrack / venice-vr); the
-      success metric is *cheaper* (≥3× fewer tokens at equal accuracy) or *more
-      accurate* (correct root cause in fewer turns) vs raw JFR.
+- [ ] Tune the summarizer against real workloads — now **driven by field-finding
+      issues** from dogfooding (see `examples/experiments.md` + `scripts/field-finding.sh`).
+      First inputs from jhelm: configurable application-package scoping
+      (#1 — **done**, `Scope` + `-a/--app-package`/`-x/--exclude`) and
+      sample-count adequacy / steady-state capture (#2). Success metric is still
+      *cheaper* (≥3× fewer tokens at equal accuracy) or *more accurate* vs raw JFR.
 
 ## Then — reach + fidelity (~weeks)
 
